# DolGod101-Bot

./: .env  Dockerfile  README.md  attributes.py  keep_alive.py  main.py  main_cog.py  pyproject.toml  requirements.txt
HOOD_Friend/: .env  attributes.py  bot_tools.ipynb  cricbuzz.html  cricbuzz_test.py  keep_alive.py  livescores.py  main.py  main_cog.py  pyproject.toml  requirements.txt  requirements2.txt  website.py
HOOD_Friend/.ipynb_checkpoints/: bot_tools-checkpoint.ipynb
