[tool.poetry]
name = "Multi-purpose Bot Real"
version = "0.0.2"
description = "This is a bot that can do many things. However, it only plays music for now. Will add more features as time passes."
authors = ["Preetham Thelluri <preetham23415@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
discord = "^1.7.3"
Flask = "^2.0.1"
youtube_dl = "^2021.12.17"
PyNaCl = "^1.4.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"