[tool.poetry]
name = "HOOD Friend"
version = "0.0.1"
description = "I don't even know what this can do right now. Will update it all soon."
authors = ["Preetham Thelluri <preetham23415@gmail.com> <sthelluri1@student.gsu.edu>"]

[tool.poetry.dependencies]
python = "^3.8"
discord = "^1.7.3"
Flask = "^2.0.1"
youtube_dl = "^2021.12.17"
PyNaCl = "^1.4.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
